# taigi_voice_datasets_packager

./: .env.example  .gitignore  README.md  pyproject.toml
.agent/: agent.md
.agent/skills/dataset-packager/: SKILL.md
.agent/skills/dataset-packager/src/dataset_packager/: __init__.py  cli.py  metadata_helper.py  root_finder.py  stage1_audio_normalizer.py  stage2_text_cleaner.py  stage3_quality_filter.py  stage4_split_dataset.py  stage5_packager.py  stats_cli.py
.agent/skills/media-converter/: SKILL.md
.agent/skills/media-converter/src/media_converter/: __init__.py  media_conv.py
.agent/skills/media-fetcher/: SKILL.md
.agent/skills/media-fetcher/src/media_fetcher/: convert_subtitles.py  download_audio.py  download_video.py  edit_sub.py  extract_json.py  fetch_subtitles.py  fetch_subtitles_fb.py  merge_translations.py  patch_metadata.py  sync_media.py  utils.py
.agent/skills/media-slicer/: SKILL.md
.agent/skills/media-slicer/src/media_slicer/: media_compiler.py  srt_clipper.py
.agent/workflows/: convert_hf_dataset.py  push-dataset-to-hf.md
datasets/lai-ching-te-speech/packaged/: README.md  dataset_info.json  metadata_5_packaged.json  metadata_overall.json  stats.md
datasets/lai-ching-te-speech/packaged/train/: data-00000-of-00001.parquet
media-subtitles/: resync_賴清德全代會.srt
utils/: add_poj_column.py  converter.py  do_merge_poj.py  prep_taigi_manifests.py
